fixing overflow

--- a/front/sheet.css
+++ b/front/sheet.css
@@ -8,12 +8,12 @@ body{
 }
 #messages {
     background: #FFFFFF;
-    overflow:auto;
+    overflow:scroll;
     display:block;
     margin: 0;
     padding: 0;
     width:100%;
-    max-height:70%;
+    max-height:80vh;
     border:3px solid #BDBDBD;
     min-height: 80vh;
     font-size: 4vh;
